--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wxt-svelte-starter",
-  "description": "manifest.json description",
+  "name": "rephrasify",
+  "description": "A chrome extension that takes elements from user's selection and send a response using Gemini's AI.",
   "private": true,
   "version": "0.0.0",
   "type": "module",
